@startuml engine-logging
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11

title Logging System [:engine]

legend right
  |= Color |= Description |
  | <#FFE0B2> | Facade & logger |
  | <#C8E6C9> | Data models |
  | <#BBDEFB> | Writer interface & implementations |
  | <#F3E5F5> | Utilities |
endlegend

' ===== Facade & Logger =====
package "Facade & Logger" #FFE0B2 {
  class ImeLog <<(O,#FFE0B2)>> {
    - writers: MutableList<LogWriter>
    + level: LogLevel
    + init(level, writers)
    + updateLevel(newLevel)
    + logger(tag): ImeLogger
    + logger(cls): ImeLogger
    - dispatch(entry)
    - flush()
  }
  note right of ImeLog
    Platform-independent logging facade
    Singleton object
    App layer injects level and writers
  end note

  class ImeLogger <<(C,#FFE0B2)>> {
    - tag: String
    - log: ImeLog
    + verbose(msg: () -> String)
    + debug(msg: () -> String)
    + info(msg: () -> String)
    + warn(msg: () -> String)
    + error(msg: () -> String)
    + error(throwable, msg)
    + tree(title, block)
  }
  note right of ImeLogger
    inline + lambda lazy evaluation
    Lambda not executed when level insufficient
    tree() supports tree-formatted log blocks
  end note
}

' ===== Data Models =====
package "Data Models" #C8E6C9 {
  class LogLevel <<(E,#C8E6C9)>> {
    VERBOSE (2)
    DEBUG (3)
    INFO (4)
    WARN (5)
    ERROR (6)
    + fromPriority(priority): LogLevel
  }
  class LogEntry <<(D,#C8E6C9)>> {
    + level: LogLevel
    + tag: String
    + message: String
    + throwable: Throwable?
    + timestamp: Long
    + threadName: String
    + threadId: Long
    + format(): String
  }
  note right of LogEntry
    Immutable log entry
    format() for file output
    Format: yyyy-MM-dd HH:mm:ss.SSS [LEVEL] [TAG] [Thread] msg
  end note

  class LogBlock <<(D,#C8E6C9)>> {
    + title: String
    + children: List<LogEntry>
    + nested: List<LogBlock>
  }
}

' ===== Writer Interface & Implementations =====
package "Writer Interface & Implementations" #BBDEFB {
  interface LogWriter <<(I,#BBDEFB)>> {
    + write(entry: LogEntry)
    + flush()
  }

  class FileLogWriter <<(C,#BBDEFB)>> {
    - channel: Channel<LogEntry>
    - scope: CoroutineScope
    - storage: LogStorage
    + write(entry)
    + flush()
  }
  note right of FileLogWriter
    Channel buffering + dedicated coroutine batch write
    Max 100 entries per batch
    Does not block calling thread
  end note

  class LogcatWriter <<(C,#BBDEFB)>> {
    + write(entry)
    + flush()
  }
  note right of LogcatWriter
    Maps to android.util.Log
    Located in androidMain source set
    flush() is no-op (immediate output)
  end note

  class LogStorage <<(C,#BBDEFB)>> {
    - logDir: File
    + appendEntries(entries)
    + readLogs(date?, levelFilter?, keyword?): List<LogEntry>
    + exportLogs(destination, fromDate, toDate)
    + updateDir(logDir)
  }
  note right of LogStorage
    Pure Kotlin implementation
    No Android Context dependency
    One file per day
    Retains 7 days, max 5MB per file
    File naming: kuaizi_ime_YYYY-MM-DD.log
  end note
}

' ===== Utilities =====
package "Utilities" #F3E5F5 {
  class CrashInterceptor <<(C,#F3E5F5)>> {
    - defaultHandler: UncaughtExceptionHandler?
    - writers: List<LogWriter>
    - storage: LogStorage
    + install()
    - handleCrash(thread, throwable)
  }
  note right of CrashInterceptor
    JVM standard UncaughtExceptionHandler
    Located in commonMain source set
    On crash:
    1. Write directly to LogStorage (bypass Channel)
    2. Sync flush all Writers
    3. Delegate to original Handler
  end note
}

' ===== Relationships =====
ImeLog *-- LogWriter : registers
ImeLog --> ImeLogger : creates
ImeLog --> LogEntry : dispatches
ImeLogger --> ImeLog : dispatches
ImeLogger --> LogBlock : tree()

LogWriter <|.. FileLogWriter : engine built-in
LogWriter <|.. LogcatWriter : engine provided

FileLogWriter --> LogStorage : writes
CrashInterceptor --> LogStorage : direct write
CrashInterceptor --> LogWriter : flush

LogEntry --> LogLevel : level
LogEntry *-- LogLevel : contains

' ===== Initialization Flow =====
note bottom of ImeLog
  **App Layer Initialization Example**
  val level = if (BuildConfig.DEBUG) VERBOSE else config.ui.logLevel
  val writers = buildList {
    if (BuildConfig.DEBUG) add(LogcatWriter())
    add(FileLogWriter(LogStorage(resolveLogDir())))
  }
  ImeLog.init(level, writers)
  CrashInterceptor(writers, storage).install()
end note

@enduml
